--- a/style.css
+++ b/style.css
@@ -1,205 +1,298 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
-
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: 'Kanit', sans-serif;
+}
+#logo-color i img{
+    width: 50px;
+}
+.navbar-brand{
+    margin-left: 50px;
+    color: rgba(255,166,0);
+    font-weight: bold;
+}
+#menu-color{
+    background-color: rgba(255,166,0);
+}
+.navbar-brand:hover{
+    color: rgba(255,166,0);
+}
+#navbar-color{
+    background-color: black;
+}
+.navbar-nav{
+    margin-left: 50px;
+}
+.nav-item{
+    margin-left: 10px;
+}
+#first{
+    border-bottom: 2px solid rgba(255,166,0);
+}
+.nav-link{
     text-decoration: none;
-    border: none;
-    outline: none;
-    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-weight: bold;
+    transition: 0.3s ease;
+}
+.nav-link:hover{
+    background-color: rgba(255,166,0);
+    box-shadow: 0 0 5px rgba(255,166,0),
+                 0 0 20px rgba(255,166,0),
+                 0 0 60px rgba(255,166,0),
+                 0 0 150px rgba(255,166,0);
+                 color: black;
 }
 
-html{
-    font-size: 62.5%;
-}
-
-body{
+.main-content{
     width: 100%;
-    height: 100vh;
-    overflow-x: hidden;
-    background-color: black;
+    height: 90vh;
+    background-image: url(./images/background.png);
+    background-size: cover;
+    background-position: 73%;
+}
+.content{
+    padding-top: 160px;
+    margin-left: 50px;
     color: white;
 }
-
-header{
+.content h1{
+    font-size: 70px;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
+.content h2{
+    font-size: 70px;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
+#btn1 button{
+    width: 200px;
+    height: 35px;
     margin-top: 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1rem 9%;
-    background-color: transparent;
-    filter: drop-shadow(10px);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.logo{
-    font-size: 3rem;
-    color: #b74b4b;
-    font-weight: 800;
+    letter-spacing: 3px;
+    font-weight: bold;
+    background-color: rgba(255,166,0);
+    border: none;
+    transition: 0.3s ease;
     cursor: pointer;
-    transition: 0.5s ease;
+
+}#btn1 button:hover{
+    background-color: rgba(255,166,0);
+    box-shadow: 0 0 5px rgba(255,166,0),
+                 0 0 20px rgba(255,166,0),
+                 0 0 60px rgba(255,166,0),
+                 0 0 150px rgba(255,166,0);
 }
 
-.logo:hover{
-    transform: scale(1.1);
-}
 
-nav a{
-    font-size: 1.8rem;
+
+
+
+.card{
+    box-shadow: 0px 0px 5px black;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    margin: auto;
+}
+.best-card .card:hover{
+    transform: translateY(-15px);
+}
+.best-card h1{
+    font-weight: bold;
     color: white;
-    margin-left: 4rem;
-    font-weight: 500;
+    text-shadow:  2px 1px 5px black;
+}
+.best-card p{
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 1px 5px black;
+}
+
+
+
+.container{
+    margin-top: 100px;
+}
+.card-content h1{
+    font-size: 30px;
+    font-weight: bold;
+}
+.card-content h3{
+    font-size: 30px;
+    font-weight: bold;
+}
+.card-content h5{
+    font-size: 30px;
+    font-weight: bold;
+}
+.card-content p{
+    font-weight: bold;
+}
+
+
+
+
+
+.banner{
+    width: 100%;
+    height: 70vh;
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(./images/banner1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 69%;
+}
+.banner h1{
+    font-size: 70px;
+    color: white;
+    font-weight: bold;
+    padding-top: 15px;
+    margin-left: 5px;
+    text-shadow: 2px 1px 5px black;
+}
+.change-content:after{
+    content: ' ';
+    animation: changetext 10s infinite linear;
+    color: rgba(255,166,0);
+
+}
+@keyframes changetext{
+    0%{content: "Chesse Burger";}
+    20%{content: "Chicken Burger";}
+    60%{content: "Beef Burger";}
+    80%{content: " Sandwich";}
+    100%{content: "Fries";}
+}
+.banner h2{
+    font-size: 50px;
+    color: rgba(255,166,0);
+    font-weight: bold;
+    padding-top: 15px;
+    margin-left: 5px;
+}
+#btn2 button{
+    width: 200px;
+    height: 35px;
+    margin-left: 5px;
+    margin-top: 20px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    background-color: rgba(255,166,0);
+    border: none;
     transition: 0.3s ease;
-    border-bottom: 3px solid transparent;
-}
-
-nav a:hover,
-nav a.active{
-    color: #b74b4b;
-    border-bottom: 3px solid #b74b4b;
-}
-
-@media(max-width:995px){
-    nav{
-        position: absolute;
-        display: none;
-        top: 0;
-        right: 0;
-        width: 40%;
-        border-left: 3px solid #b74b4b;
-        border-bottom: 3px solid #b74b4b;
-        border-bottom-left-radius: 2rem;
-        padding: 1rem solid;
-        background-color: #161616;
-        border-top: 0.1rem solid rgba(0,0,0,0.1);
-    }
-
-    nav.active{
-        display: block;
-    }
-
-    nav a{
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-    }
-
-    nav a:hover,
-    nav a.active{
-        padding: 1rem;
-        border-radius: 0.5rem;
-        border-bottom: 0.5rem solid #b74b4b;
-    }
-}
-
-section{
-    min-height: 100vh;
-    padding: 5rem 9% 5rem;
-}
-
-.home{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8rem;
-    background-color: black;
-}
-
-.home .home-content h1{
-    font-size: 6rem;
-    font-weight: 700;
-    line-height: 1.3;
-}
-
-span{
-    color: #b74b4b;
-}
-
-.home-content h3{
-    font-size: 4rem;
-    margin-bottom: 1rem;
-    font-weight: 700;
-}
-
-.home-content p{
-    font-size: 1.6rem;
-}
-
-.home-img{
-    border-radius: 50%;
-}
-
-.home-img img{
-    position: relative;
-    width: 32vw;
-    border-radius: 50%;
-    box-shadow: 0 0 25px solid #b74b4b;
     cursor: pointer;
-    transition: 0.2s linear;
+}
+#btn2 button:hover{
+    background-color: rgba(255,166,0);
+    box-shadow: 0 0 5px rgba(255,166,0),
+                 0 0 20px rgba(255,166,0),
+                 0 0 60px rgba(255,166,0),
+                 0 0 150px rgba(255,166,0);
+
 }
 
-.home-img img:hover{
-    font-size: 1.8rem;
-    font-weight: 500;
+
+
+
+
+
+.new-card{
+    margin-top: 50px;
+    cursor: pointer;
+}
+.new-card h1{
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+#btn3{
+    text-align: center;
+}
+#btn3 button{
+    width: 150px;
+    height: 35px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    border: none;
+    background-color: rgba(255,166,0);
+    transition: 0.50s ease-in;
+    cursor: pointer;
+
+}
+#btn3 button:hover{
+    background-color: black;
+    color: white;
+}
+#btn4{
+    text-align: center;
+    margin-top: 50px;
+}
+#btn4 button{
+    width: 200px;
+    height: 35px;
+    background-color: rgba(255,166,0);
+    border: none;
+    font-weight: bold;
+    transition: transform 0.5s ease;
+    cursor: pointer;
+}
+#btn4 button:hover{
+    transform: translateY(-10px);
 }
 
-.social-icons a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background-color: transparent;
-    border: 0.2rem solid #b74b4b;
-    font-size: 2rem;
-    border-radius: 50%;
-    margin: 3rem 1.5rem 3rem 0;
-    transition: 0.3s ease;
-    color: #b74b4b;
-}
 
-.social-icons a:hover{
+
+
+
+
+
+.banner2{
+    width: 100%;
+    height: 60vh;
+    background-image: url(./images/banner2.png);
+    background-size: cover;
+    background-position: 50%;
+    margin-top: 50px;
+}
+.banner2 h1{
+    font-weight: bold;
+    color: white;
+    font-size: 60px;
+    padding-top: 100px;
+    margin-left: 10px;
+}
+.banner2 h2{
+    font-weight: bold;
     color: black;
-    transform: scale(1.3) translateY(-5px);
-    background-color: #b74b4b;
-    box-shadow: 0  0 25px #b74b4b;
-}
-
-.btn{
+    background-color: rgba(255,166,0);
+    font-size: 60px;
     display: inline-block;
-    padding: 1rem 2.8rem;
+    margin-left: 10px;
+}
+
+
+.about-us{
+    margin-top: 50px;
+}
+
+
+#footer{
     background-color: black;
-    border-radius: 4rem;
-    font-size: 1.6rem;
-    color: #b74b4b;
-    letter-spacing: 0.3rem;
-    font-weight: 600;
-    border: 2px solid #b74b4b;
-    transition: 0.3s ease;
-    cursor: pointer;
+    padding: 30px 0;
+    font-size: 14px;
+    margin-top: 50px;
 }
-
-.btn:hover{
-    transform: scale3d(1.03);
-    background-color: #b74b4b;
-    color: black;
-    box-shadow: 0 0 25px #b74b4b;
+#footer .footer-links a{
+    color: white;
+    font-weight: bold;
+    padding-left: 15px;
 }
-
-.typing-text{
-    font-size: 34px;
-    font-weight: 600;
-    min-width: 280px;
-}      
-
-@media (max-width: 1000px){
-    .home{
-        gap: 4rem;
-    }
+#footer .footer-links a:first-child{
+    padding-left: 0;
 }
-
+#footer .footer-links a:hover{
+    color: rgba(255,166,0);
+}
+.copyright{
+    color: white;
+}
